--- a/css/style.css
+++ b/css/style.css
@@ -331,3 +331,91 @@ body{
     padding: 0.9% 0 0.9% 0;
     width: 9.2%;
 }
+.k_packet{
+    background-image: url("../img/4k_packet.png");
+    background-size: 100%;
+    background-repeat: no-repeat;
+    padding-bottom: 10%;
+    padding-top: 1%;
+    margin-top: 3%;
+}
+.k_packet h3{
+    font-size: 225%;
+    font-weight: 500;
+    margin-left: 3%;
+    margin-bottom: 1.3%;
+    color: white;
+}
+.k_packet p{
+    font-size: 73%;
+    font-weight: 500;
+    width: 30%;
+    margin-left: 3%;
+    color: white;
+}
+.channel{
+    display: flex;
+    align-items: center;
+    margin-left: 3%;
+    margin-top: 1.5%;
+}
+.amount{
+    display: flex;
+    align-items: center;
+    margin-left: 3.3%;
+    margin-top: 1.5%;
+}
+.k_packet h1{
+    font-size: 225%;
+    margin-left: 3%;
+    margin-top: 7%;
+    color: white;
+}
+.up_footer{
+    display: flex;
+    justify-content: space-around;
+    font-size: 73%;
+    font-weight: 700;
+    color: #767676;
+}
+.seb{
+    display: flex;
+    justify-content: space-between;
+}
+.swebank{
+    display: flex;
+    justify-content: space-between;
+}
+.dis{
+    display: flex;
+    justify-content: space-between;
+}
+.money_check{
+    display: flex;
+    justify-content: space-between;
+}
+.footer{
+    background: #F9F9F9;
+    width: 80%;
+    margin: auto;
+    margin-top: 14%;
+    padding-top: 2%;
+    padding-bottom: 4%;
+}
+.icons{
+    display: flex;
+    justify-content: space-between;
+}
+.down_footer{
+    text-align: center;
+    margin-top: 4%;
+    color: #FF5C28;
+    font-size: 73%;
+}
+.down_footer p{
+    margin-top: 4%;
+    margin-bottom: 2%;
+}
+.down_footer a{
+    color: #FF5C28;
+}
