--- a/css/style.css
+++ b/css/style.css
@@ -81,8 +81,12 @@ body{
     font-size: 75%;
     font-weight: 600;
 }
+.nav li{
+    transition: 0.5s;
+}
 .nav li:hover{
     color: #10C3F4;
+    transition: 0.5s;
 }
 .logo{
     width: 20%;
@@ -99,6 +103,13 @@ body{
     padding: 1.2% 0 1.2% 0;
     text-align: center;
     text-decoration: none;
+    transition: 1s;
+}
+.lk_button:hover{
+    border: none;
+    background: #10C3F4;
+    color: white;
+    transition: 1s;
 }
 .wrapper{
     margin: auto;
@@ -213,6 +224,14 @@ body{
     margin-left: 1%;
     text-align: center;
     padding: 0.8% 0 0.8% 0;
+    cursor: pointer;
+    transition: 0.5s;
+}
+.connect_button:hover{
+    border: 2px solid #10C3F4;
+    background: white;
+    color: #10C3F4;
+    transition: 0.5s;
 }
 .information{
     margin-top: 6.8%;
@@ -267,6 +286,14 @@ body{
     padding: 0.8% 0 0.8% 0;
     position: absolute;
     width: 10%;
+    transition: 0.5s;
+    cursor: pointer;
+}
+.news_button:hover{
+    background: white;
+    border: 2px solid #10C3F4;
+    color: #10C3F4;
+    transition: 0.5s;
 }
 .net_packet {
     background-image: url("../img/net_packet.png");
@@ -634,6 +661,66 @@ body{
 }
 .mobile_footer{
     display: none;
+}
+.support_form{
+    background-image: url("../img/support_back.png");
+    background-repeat: no-repeat;
+    padding: 3% 0 7% 10%;
+    margin-top: 5%;
+}
+.support_form h1{
+    color: white;
+    font-weight: 700;
+    font-size: 185%;
+    margin-bottom: 4%;
+}
+.support_form input{
+    border: none;
+    border-bottom: 2px solid #767676;
+    background: none;
+    outline: none;
+    width: 40%;
+    color: white;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+    font-size: 90%;
+    margin-top: 1%;
+}
+.support_form p{
+    color: #A1A1A1;
+    font-size: 100%;
+    font-weight: 600;
+}
+.support_form div{
+    display: flex;
+    align-items: center;
+}
+.feedback{
+    position: absolute;
+    margin: 1% 0 0 30%;
+    border-left: 2px solid #767676;
+    padding-left: 1.5%;
+    height: 44%;
+}
+.feedback textarea{
+    background: none;
+    border: none;
+    outline: none;
+    color: white;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+    font-size: 90%;
+    position: absolute;
+    top: 0;
+    resize: none;
+    height: 100%;
+    width: 1000%;
+}
+.feedback textarea[placeholder]{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 100%;
+    font-weight: 600;
+    color: #A1A1A1;
 }
 @media all and (min-width:320px) and (max-width: 768px){
     body{
