--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,9 @@ body{
     font-family: 'Montserrat', sans-serif;
     width: 75%;
 }
+.wrapper a{
+    text-decoration: none;
+}
 .header{
     display: flex;
     justify-content: space-between;
@@ -16,6 +19,7 @@ body{
     font-size: 80%;
     align-items: center;
     border-bottom: 0.3px solid #D1D1D1;
+    padding: 2% 0 2% 0;
 }
 .phones{
     display: flex;
@@ -27,6 +31,9 @@ body{
     width: 13px;
     height: 13px;
 }
+.phones p{
+    margin-top: 6%;
+}
 .time_set{
     display: flex;
     align-items: center;
@@ -35,6 +42,9 @@ body{
 .time_set img{
     width: 13px;
     height: 13px;
+}
+.time_set p{
+    margin-top: 6%;
 }
 .languages{
     display: flex;
@@ -131,7 +141,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 40%;
+    width: 45%;
     margin-left: 12%;
 }
 .choose_type p{
@@ -157,16 +167,28 @@ body{
     display: flex;
     justify-content: space-between;
 }
+.services_suggests_nd{
+    margin-top: 3%;
+    display: flex;
+    justify-content: space-between;
+}
+.services_suggests_rd{
+    margin-top: 3%;
+    display: flex;
+    justify-content: space-between;
+}
 .suggest{
     width: 32%;
     border: 0.5px solid #E1E1E1;
     box-sizing: border-box;
     border-radius: 5px;
     padding-bottom: 11%;
+    padding-top: 2%;
 }
 .suggest img{
     width: 25px;
     height: 25px;
+    margin-top: -10%;
 }
 .cost{
     display: flex;
@@ -182,6 +204,10 @@ body{
     align-items: center;
     font-size: 112.5%;
 }
+.cost_info p{
+    margin-top: 10%;
+}
+
 .speed{
     display: flex;
     align-items: center;
@@ -211,6 +237,11 @@ body{
     width: 75%;
     font-size: 73%;
     margin-left: 5%;
+    margin-top: 8%;
+    margin-bottom: 11%;
+}
+.suggest p{
+
 }
 .connect_button{
     font-size: 73%;
@@ -309,6 +340,7 @@ body{
     font-weight: 500;
     margin-left: 3%;
     margin-bottom: 1.3%;
+    margin-top: 3.5%;
 }
 .net_packet p{
     font-size: 73%;
@@ -370,12 +402,16 @@ body{
     padding-top: 1%;
     margin-top: 3%;
 }
+.prev a{
+    text-decoration: underline;
+}
 .k_packet h3{
     font-size: 225%;
     font-weight: 500;
     margin-left: 3%;
     margin-bottom: 1.3%;
     color: white;
+    margin-top: 4%;
 }
 .k_packet p{
     font-size: 73%;
@@ -721,6 +757,11 @@ body{
     font-size: 100%;
     font-weight: 600;
     color: #A1A1A1;
+}
+@media screen and (min-width: 1000px) and (max-width: 1800px){
+    body{
+        width: 100%;
+    }
 }
 @media all and (min-width:320px) and (max-width: 768px){
     body{
