--- a/css/login.css
+++ b/css/login.css
@@ -73,3 +73,81 @@ body{
     color: white;
     font-weight: 700;
 }
+.arrow{
+    position: absolute;
+}
+.logo{
+    width: 40%;
+    padding-top: 5%;
+}
+.login_input{
+    border: 1px solid #BFBFBF;
+    box-sizing: border-box;
+    border-radius: 5px;
+    width: 60%;
+    padding: 1.5% 0 1.5% 3%;
+    outline: none;
+    color: #4F4F4F;
+    font-weight: 600;
+}
+@media screen and (min-width: 320px) and (max-width: 768px) {
+    body{
+        background-image: url("../img/mobile_login_back.png");
+    }
+    .arrow{
+        top: 3%;
+        margin-left: 2%;
+        width: 10%;
+        position: absolute;
+    }
+    .white_logo{
+        position: absolute;
+        right: 2%;
+        top: 1%;
+        width: 30%;
+    }
+    .languages{
+        top: 6.5%;
+    }
+    .login{
+        width: 95.5%;
+        margin: auto;
+        margin-top: 30%;
+        padding-bottom: 4%;
+    }
+    .logo{
+        width: 65%;
+        margin-top: 7%;
+    }
+    .login_input{
+        width: 95%;
+        padding: 3% 0 3% 5%;
+        margin-bottom: 1%;
+
+    }
+    .check{
+        margin-left: 12%;
+    }
+    .check input{
+        margin-top: 6%;
+    }
+    .enjoy{
+        background-color: #10C3F4;
+        font-size: 90%;
+        font-weight: 600;
+        color: white;
+        border-radius: 10px;
+        position: absolute;
+        width: 92%;
+        margin-left: -46%;
+        padding: 4% 0 4% 0;
+        margin-top: 1%;
+    }
+    .reg{
+        padding-top: 15%;
+    }
+    .social{
+        width: 35%;
+        padding-top: 10%;
+    }
+}
