--- a/css/style.css
+++ b/css/style.css
@@ -758,9 +758,25 @@ body{
     font-weight: 600;
     color: #A1A1A1;
 }
+.right_mobile_header{
+    display: none;
+}
+.mobile_prev{
+    display: none;
+}
+.mobile_initial{
+    display: none;
+}
+.mobile_up_p{
+    display: none;
+}
+.mobile_down_p{
+    display: none;
+}
 @media screen and (min-width: 1000px) and (max-width: 1800px){
     body{
         width: 100%;
+        overflow-x: hidden;
     }
 }
 @media all and (min-width:320px) and (max-width: 768px){
@@ -770,147 +786,130 @@ body{
     .header{
         display: none;
     }
-    .nav-bar{
-        display:none
-    }
-    .slider{
+    .nav{
         display: none;
     }
-    .mobile_header{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-    .wrapper{
+    .lk_button{
         display: none;
     }
-    .footer{
-        display: none;
+    .logo img{
+        width: 35%;
+        position: absolute;
+        top: 1%;
+        left: 3%;
     }
     .right_mobile_header{
         display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 25%;
+        margin-top: 3%;
+        margin-right: -9%;
+    }
+    .prev{
+        display: none;
+    }
+    .mobile_prev{
+        display: flex;
         align-items: center;
         justify-content: space-between;
-        width: 20%;
-        margin-right: 5%;
+        width: 50%;
+        margin-top: 10%;
+        margin-left: 3%;
     }
-    .mobile_wrapper{
-        display: block;
+    .mobile_prev img{
+        width: 8px;
+        height: 8px;
+    }
+    .mobile_prev a{
+        font-size: 73%;
+        color: #979797;
+        text-decoration: underline;
+    }
+    .mobile_prev p{
+        font-size: 73%;
+        color: #363636;
+    }
+    .about_text{
         width: 95%;
         margin: auto;
-        margin-top: 10%;
-    }
-    .mobile_slider{
-        background-image: url("../img/mobile_slider.png");
+        background-image: url("../img/mobile_about_back.png");
         background-repeat: no-repeat;
-        padding-top: 3%;
-        padding-left: 2%;
-        padding-bottom: 12%;
-        direction: inherit;
+        background-position-y: 100%;
+        background-size: 100%;
     }
-    .mobile_info{
-        color: white;
-        font-size: 12px;
-        font-weight: 600;
-        background: #10C3F4;
-        border-radius: 10px;
-        font-family: 'Montserrat', sans-serif;
-        outline: none;
-        border: none;
-        width: 176px;
-        height: 46px;
-        margin-top: 45%;
+    .about_text h1{
+        font-size: 100%;
+        margin-top: 7%;
     }
-    .mobile_services{
-        display: block;
-        margin-top: 10%;
-    }
-    .top{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-    .top div{
-        display: flex;
-        align-items: center;
-    }
-    .top div img{
-        width: 15px;
-        height: 18px;
-    }
-    .bot{
-        display: flex;
-        justify-content: space-between;
-        font-size: 12px;
-        font-weight: 500;
-    }
-    .services_suggests{
-        display: block;
-    }
-    .suggest{
+    .wrapper{
         width: 100%;
-        font-size: 12px;
-        padding-bottom: 40%;
-        margin-bottom: 5%;
     }
-    .suggest h4{
-        font-size: 14px;
+    .about_back{
+        display: none;
     }
-    .suggest h5{
-        font-size: 12px;
+    .initial{
+        display: none;
     }
-    .connect_button{
-        width: 50%;
-        padding: 5% 0 5% 0;
-        margin-left: 5%;
-        margin-top: 15%;
-    }
-    .mobile_information{
-        display: block;
-        margin-top: 10%;
-    }
-    .news{
-        font-size: 12px;
-    }
-    .pos_news{
-        display: block;
-    }
-    .date{
-        margin-left: 1%;
-    }
-    .new{
-        margin-left: 1%;
-    }
-    .mobile_packets{
-        display: block;
-        font-size: 14px;
-    }
-    .net_packet{
-        background-image: url("../img/mobile_net_packet.png");
-        padding-bottom: 65%;
-    }
-    .enjoy_button{
-        width: 55%;
-        padding: 6% 0 6% 0;
-        margin-top: 25%;
-        margin-left: 20%;
-    }
-    .k_packet{
-        background-image: url("../img/mobile_4k_packet.png");
-        padding-bottom: 75%;
-    }
-    .mobile_footer{
-        display: block;
-    }
-    .up_footer{
-        display: block;
-    }
-    .down_footer{
-        display: block;
-    }
-    .hidden_header{
+    .mobile_initial{
         display: flex;
-        justify-content: space-between;
-        margin-top: 2%;
+        position: absolute;
+        margin-left: 35%;
+        margin-top: 18%;
+    }
+    .etc{
+        width: 95%;
+        margin: auto;
+        margin-top: 35%;
+    }
+    .etc h5{
+        font-size: 100%;
+    }
+    .up{
+        flex-direction: column;
+
+    }
+    .up p{
+        width: 95%;
+    }
+    .down{
+        flex-direction: column;
+    }
+    .up_p{
+        display: none;
+    }
+    .down_p{
+        display: none;
+    }
+    .mobile_up_p{
+        display: flex;
+    }
+    .mobile_down_p{
+        display: flex;
+    }
+    .contacts{
+        width: 95%;
+        margin: auto;
+    }
+    .contacts h5{
+        font-size: 100%;
+    }
+    .data_contacts{
+        flex-direction: column;
+    }
+    .phone{
+        width: 100%;
+    }
+    .email{
+        width: 100%;
+        margin-top: 3%;
+    }
+    .address{
+        width: 100%;
+        margin-top: 3%;
+        margin-bottom: 15%;
+    }
+    .footer{
+        width: 100%;
     }
 }
